<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical" android:background="#BBDEFB">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:text="@string/profile_title"/>

    <Button style="@style/ButtonTheme"
        android:text="@string/spotify_streamer_title"
        android:id="@+id/btn_spotify_streamer"/>
    <Button style="@style/ButtonTheme"
        android:text="@string/scores_app_btn"
        android:id="@+id/btn_scores_app"/>
    <Button style="@style/ButtonTheme"
        android:text="@string/library_app_title"
        android:id="@+id/btn_library_app"/>
    <Button style="@style/ButtonTheme"
        android:text="@string/build_it_bigger_title"
        android:id="@+id/btn_build_it_bigger"/>
    <Button style="@style/ButtonTheme"
        android:text="@string/xyz_reader_title"
        android:id="@+id/btn_xyz_reader"/>
    <Button style="@style/ButtonTheme"
        android:background="#FF5252"
        android:text="@string/capstone_app_title"
        android:id="@+id/btn_my_own_app"/>

</LinearLayout>
